--- a/index.css
+++ b/index.css
@@ -1,18 +1,33 @@
 *{
     margin:0;
     padding:0;
+    overflow: hidden;
 }
+
+.background video{
+    position: fixed;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1; 
+    object-fit: cover;
+    opacity: 0.9;
+}
+
 .container{
     width:100%;
     height:100vh;
     display:flex;
     justify-content: center;
     align-items: center;
+
 }
 .calculator{
+    box-shadow: 50px 50px 55px rgba(0, 0, 0, 0.5),-50px 50px 55px rgba(0, 0, 0, 0.5),50px -50px 55px rgba(0, 0, 0, 0.5),-50px -50px 55px rgba(0, 0, 0, 0.5);
     background-color:#3a4452;
     border-radius: 20px;
-    padding:20px;
+    padding:20px 0px 20px 20px;
 }
 .calculator form input{
     border: 0;
@@ -20,33 +35,39 @@
     width:50px;
     height:45px;
     border-radius: 15px;
-    box-shadow: -8px -8px 15px rgba(223, 219, 219, 0.2),5px 5px 15px rgba(68, 55, 55, 0.2);
+    box-shadow: -8px -8px 5px rgba(223, 219, 219, 0.2),5px 5px 15px rgba(68, 55, 55, 0.2);
     background: transparent;
     font-size: 20px;
     color: #e3f9ff;
     margin:10px;
     cursor: pointer;
     transition: transform 0.2s ease; 
+    border:0.5px solid rgba(223, 219, 219, 0.2);
 }
 
 .calculator form input:active {
+    border-radius: 15px;
     transform: scale(0.75); 
-    box-shadow:8px 8px 15px rgba(223, 219, 219, 0.2),5px 5px 15px rgba(68, 55, 55, 0.2);
+    box-shadow:0px 0px 10px rgba(223, 219, 219, 0.2);
+    border:1px solid rgba(223, 219, 219, 0.2);
     
 }
+
 
 #eq{
    width:140px;
 }
 form .display{
     display:flex;
+    width: 270px;
+    overflow-x: auto;
     height: 50px;
     justify-content:flex-end;
     align-items: center;
     padding-right: 10px;
     font-size:20px ;
     color: aliceblue;
-    margin:20px;
+    margin: 10px 0px 20px 5px;
     box-shadow: -8px -8px 15px rgba(223, 219, 219, 0.2) inset;
     border-radius: 10px;
 }
